--- a/app/components/company-page/company-page.component.html
+++ b/app/components/company-page/company-page.component.html
@@ -1,14 +1,16 @@
 ﻿<div class="col-lg-4 panel panel-info company-list">
     <!-- Here comes the list of companies. -->
-    <a><h6>Survey Corps</h6></a>
-    <a><h6>Dog Co.</h6></a>
-    <a class="active"><h6>Jones&amp;Jones</h6></a>
+    <a *ngFor="let company of (companies | async)?.results" [class.active]="company === selectedCompany" (click)="selectedCompany = company">
+        <h6>{{company.name}}</h6>
+    </a>
 </div>
-<div class="col-lg-8 panel panel-warning" >
+<div class="col-lg-8 panel panel-warning"  *ngIf="selectedCompany">
     <!-- Here comes the selected or newly created company's editor / detail. -->
-    <h4 class="panel-header">Jones&amp;Jones: (1 cards)</h4>
-    <input class="form-control">
-    <button class="btn btn-info">Save</button>
+    <h4 class="panel-header">{{selectedCompany.name}}: (1 cards)
+        <i class="glyphicon glyphicon-pencil" (click)="editCompany()" *ngIf="!editing"></i>
+    </h4>
+    <input class="form-control" *ngIf="editing" [(ngModel)]="selectedCompany.name">
+    <button class="btn btn-info" *ngIf="editing" (click)="saveCompany(selectedCompany)">Save</button>
 </div>
 <div class="col-lg-8 panel panel-warning">
     <button class="btn btn-info">Create company</button>
